--- a/locales/bg.json
+++ b/locales/bg.json
@@ -1,182 +1,196 @@
 {
-    "24_hrs": "24 часа",
-    "accept_notifications": "Приемане на известия",
-    "ads": "Реклама",
-    "back_color": "Цвят на фона",
-    "base_color": "Основен цвят",
-    "border_color": "Цвят на границите",
-    "configuration": "Конфигурация",
-    "contact": "Контакт",
-    "count_news_format": [[0, 0,"%d новини"],[1,1,"една новина"],[2,null,"%d новини"]],
-    "count_places_format": [[0,0,"%d места"],[1,1,"едно място"],[2,null,"+%d места"]],
-    "count_views_format": [[0,0,"%d прегледа"],[1,1,"%d прегледа"],[2,null,"%d прегледа"]],
-    "country_al": "Албания",
-    "country_bg": "България",
-    "country_cz": "Чехия",
-    "country_hu": "Унгария",
-    "country_in": "Индия",
-    "country_it": "Италия",
-    "country_md": "Молдавия",
-    "country_pl": "Полша",
-    "country_ro": "Румъния",
-    "country_ru": "Русия",
-    "country_tr": "Турция",
-    "country_lv": "Латвия",
-    "country_kz": "Казахстан",
-    "daily_horoscope_details_format": "Хороскоп за деня %(name)s.",
-    "daily_horoscope_details": "Ежедневен хороскоп. Хороскоп за днес и утре.",
-    "daily_horoscope_format": "Хороскоп: %(name)s",
-    "daily_horoscope": "Ежедневен хороскоп",
-    "daily": "Ежедневно",
-    "date_format": "D MMMM",
-    "day_format": "dddd, D MMMM",
-    "days": "дни",
-    "detailed_horoscope": "Подробен хороскоп",
-    "error_404_info": "Страницата не бе намерена",
-    "error_500_info": "Неизвестна грешка",
-    "error_description": "Възникна грешка. Търсим виновен...",
-    "error": "Грешка",
-    "events_from_country_format": "Събития от %(name)s",
-    "events": "Събития",
-    "exchange_rates": "Валутни курсове",
-    "exchange": "Валутен курс",
-    "export_horoscope": "Разработчици",
-    "forecast_no_data": "Опитайте след няколко минути.",
-    "forecast_on_email_place_format": "Времето на имейл за %(name)s",
-    "foto_video_from_event_format": "Фото и видео: %(name)s",
-    "generate": "Генерирайте",
-    "head_back_color": "Заглавна обратно цвят",
-    "head_text_color": "Заглавен текст цвят",
-    "heigth": "Височина",
-    "home": "Първа страница",
-    "horizontal": "Хоризонтален",
-    "horo_api_title": "Хороскопи API",
-    "horoscope_bg_app_name": "Ournet Хороскоп",
-    "horoscope_bg_short_app_name": "Хороскоп",
-    "horo_notifications_subscribe_for_sign_format": "%(name)s: Абонамент за дневни известия",
-    "horo_on_your_site_info": "Безплатен ежедневен хороскоп на вашия сайт",
-    "horo_on_your_site": "Хороскоп на вашия сайт",
-    "horo_sign_daily_details_format": "%(sign)s. Дневен хороскоп: %(date)s",
-    "horo_sign_daily_title_format": "%(sign)s: Дневен хороскоп",
-    "horo_sign_date_format": "D MMM",
-    "horo_sign_weekly_details_format": "%(sign)s. Хороскоп на седмицата: %(date)s",
-    "horo_sign_weekly_title_format": "%(sign)s: Седмичен хороскоп",
-    "horoscope": "Хороскоп",
-    "hour": "Час",
-    "html_code": "HTML код",
-    "humidity": "Влажност",
-    "icon_color": "Цвят на изображението",
-    "images": "Изображения",
-    "important_news_in_last_7days": "Важни новини през последните 7 дни",
-    "important_news": "Важни новини",
-    "important": "Важно",
-    "in_country_bg": "България",
-    "info": "Информация",
-    "international": "Международен",
-    "invalid_email": "Невалиден имейл!",
-    "item_color": "Цвят на елемента",
-    "item_conditions": "Атмосферно състояние",
-    "item_pressure": "mmHg",
-    "item_temperatire": "Температура, °C",
-    "item_wind_dir": "Посока на вятъра",
-    "item_wind_speed_ms": "м/с",
-    "item_wind_speed": "Скорост на вятъра. м/с",
-    "latest_events_from_country_format": "Последни събития в %(name)s",
-    "latest_events": "Последни събития",
-    "latest_news": "Последните новини",
-    "latest_quotes_in_media_country_format": "Последните изявления/цитати от пресата - %(country)s",
-    "latest_quotes_in_media": "Последни изявления за пресата",
-    "latest_quotes": "Последните изявления",
-    "line_color": "Цветни линии",
-    "load_more_places": "Повече населени места",
-    "lucky_numbers": "Лъки цифри",
-    "max": "макс",
-    "min": "мин",
-    "mm": "мм",
-    "more_events": "Още събития",
-    "more_quotes": "Още изявления",
-    "more": "Още",
-    "most_important_news_in_last_7days_country_format": "Най-важните новини от пресата в %(country)s през последните 7 дни",
-    "news_bg_app_name": "Ournet Новини",
-    "news_bg_short_app_name": "Новини",
-    "news_site_description_format": "Всички новини от %(country)s. Събития, изявления, тенденции.",
-    "news_site_title_format": "%(country)s новини",
-    "news_sources": "Новини източници",
-    "news_topic_description_format": "%(name)s - Последни новини, истории и дискусии от пресата",
-    "news_topic_page_title_format": "%(name)s - Последни новини",
-    "news": "Новини",
-    "no_days": "Брой дни",
-    "no_thanks": "Не, благодаря",
-    "not_found_places": "Не намерихме място.",
-    "opinia": "Мнение",
-    "photo": "Фото",
-    "place": "Място",
-    "places": "Места",
-    "popular_news": "Популярни новини",
-    "popular": "Популярен",
-    "portal_bg_app_name": "Our.bg",
-    "portal_bg_short_app_name": "Our.bg",
-    "portal_site_description_format": "Всички новини от %(country)s. Събития, изявления, тенденции.",
-    "portal_site_title_format": "%(country)s новини",
-    "position": "Позиция",
-    "preview": "Визуализация",
-    "quotes_about_format": "%(name)s - Изявления",
-    "quotes_by_author_format": "Изявления на %(name)s",
-    "quotes": "Изявления",
-    "read_more_on_source_format": "Прочетете на %(name)s",
-    "recent_search": "Последни търсения",
-    "related_news": "Свързани новини",
-    "save": "Запази",
-    "search_place_format": "Резултати от търсенето по: %(name)s",
-    "search_place_in_adm_cn_format": "Търсене на град в %(region)s, %(country)s",
-    "search_place_in_cn_format": "Търсене на град в %(country)s",
-    "search_place": "Търсене на град",
-    "search_result_format": "Резултати: %(name)s",
-    "share_on_format": "Изпрати на %(name)s",
-    "share_with_your_friends": "Споделете с приятелите си",
-    "show_header": "С титлата",
-    "subscribe_to_daily_notifications": "Абонамент за дневни известия",
-    "subscribe": "Абонирайте",
-    "temperature": "Температура",
-    "text_color": "Цвят на текста",
-    "today": "Днес",
-    "tomorrow": "Утре",
-    "topic_events_title_format": "%(name)s - Събития",
-    "topic_latest_news_format": "%(name)s - Последните новини",
-    "topic_news_title_format": "Новини за %(name)s",
-    "topic_quotes_title_format": "%(name)s - Изявления",
-    "total_subscribers_format": "Общо абонати: %d",
-    "trending": "Тенденции",
-    "useful": "Полезен",
-    "vertical": "Вертикална",
-    "video_news": "Видео новини",
-    "video": "Видео",
-    "views": "гледки",
-    "weather_bg_app_name": "Ournet Времето",
-    "weather_bg_short_app_name": "Времето",
-    "weather_cright": "Прогноза за времето, предоставена от MET Norway",
-    "weather_for_10days": "Прогноза за времето за 10 дни",
-    "weather_home_title_format": "Времето в %(name)s за 10 дни",
-    "weather_in_cn_summary_format": "Прогноза за времето в %(country)s за 10 дни на всяко място",
-    "weather_in_format": "Времето в %(name)s",
-    "weather_notifications_subscribe_for_place_format": "Абонирайте се за предупреждението за времето за %(name)s",
-    "weather_on_your_site_info_format": "Поставете времето на вашия сайт за всяко населено място в %(country)s.",
-    "weather_on_your_site": "Времето в сайта ви",
-    "weather_place_description_format": "Прогноза за времето в %(name1)s, %(name2)s - днес, утре, 10 дни, 7 дни",
-    "weather_place_details_info_format": "Прогноза за времето в %(name1)s, %(name2)s. Времето днес, утре, 3 дни, 7 дни, 10 дни, 15 дни, тези дни. Прогноза за времето за %(name3)s.",
-    "weather_place_title_format_10days_format": "Времето в %(name1)s, прогноза - %(name2)s, 10 дни",
-    "weather_place_title_format": "Времето в %(name1)s, прогноза - %(name2)s",
-    "weather": "Времето",
-    "weather2": "Прогноза за времето",
-    "weekly_horoscope_details_format": "Седмичен хороскоп: %(date)s.",
-    "weekly_horoscope_details": "Седмичен хороскоп. Хороскоп за текущата седмица.",
-    "weekly_horoscope_format": "Седмичен хороскоп: %(date)s",
-    "weekly_horoscope": "Седмичен хороскоп",
-    "weather_around_the_world": "Времето по света",
-    "weekly": "Седмичен",
-    "width": "Широчина",
-    "love":"Обичам",
-    "health": "Здраве",
-    "success": "Успех",
-    "wind": "Вятър"
+  "24_hrs": "24 часа",
+  "accept_notifications": "Приемане на известия",
+  "ads": "Реклама",
+  "back_color": "Цвят на фона",
+  "base_color": "Основен цвят",
+  "border_color": "Цвят на границите",
+  "configuration": "Конфигурация",
+  "contact": "Контакт",
+  "count_news_format": [
+    [0, 0, "%d новини"],
+    [1, 1, "една новина"],
+    [2, null, "%d новини"]
+  ],
+  "count_places_format": [
+    [0, 0, "%d места"],
+    [1, 1, "едно място"],
+    [2, null, "+%d места"]
+  ],
+  "count_views_format": [
+    [0, 0, "%d прегледа"],
+    [1, 1, "%d прегледа"],
+    [2, null, "%d прегледа"]
+  ],
+  "country_al": "Албания",
+  "country_bg": "България",
+  "country_cz": "Чехия",
+  "country_hu": "Унгария",
+  "country_in": "Индия",
+  "country_it": "Италия",
+  "country_md": "Молдавия",
+  "country_pl": "Полша",
+  "country_ro": "Румъния",
+  "country_ru": "Русия",
+  "country_tr": "Турция",
+  "country_lv": "Латвия",
+  "country_kz": "Казахстан",
+  "daily_horoscope_details_format": "Хороскоп за деня %(name)s.",
+  "daily_horoscope_details": "Ежедневен хороскоп. Хороскоп за днес и утре.",
+  "daily_horoscope_format": "Хороскоп: %(name)s",
+  "daily_horoscope": "Ежедневен хороскоп",
+  "daily": "Ежедневно",
+  "date_format": "D MMMM",
+  "day_format": "dddd, D MMMM",
+  "days": "дни",
+  "detailed_horoscope": "Подробен хороскоп",
+  "error_404_info": "Страницата не бе намерена",
+  "error_500_info": "Неизвестна грешка",
+  "error_description": "Възникна грешка. Търсим виновен...",
+  "error": "Грешка",
+  "events_from_country_format": "Събития от %(name)s",
+  "events": "Събития",
+  "exchange_rates": "Валутни курсове",
+  "exchange": "Валутен курс",
+  "export_horoscope": "Разработчици",
+  "forecast_no_data": "Опитайте след няколко минути.",
+  "forecast_on_email_place_format": "Времето на имейл за %(name)s",
+  "foto_video_from_event_format": "Фото и видео: %(name)s",
+  "generate": "Генерирайте",
+  "head_back_color": "Заглавна обратно цвят",
+  "head_text_color": "Заглавен текст цвят",
+  "heigth": "Височина",
+  "home": "Първа страница",
+  "horizontal": "Хоризонтален",
+  "horo_api_title": "Хороскопи API",
+  "horoscope_bg_app_name": "Ournet Хороскоп",
+  "horoscope_bg_short_app_name": "Хороскоп",
+  "horo_notifications_subscribe_for_sign_format": "%(name)s: Абонамент за дневни известия",
+  "horo_on_your_site_info": "Безплатен ежедневен хороскоп на вашия сайт",
+  "horo_on_your_site": "Хороскоп на вашия сайт",
+  "horo_sign_daily_details_format": "%(sign)s. Дневен хороскоп: %(date)s",
+  "horo_sign_daily_title_format": "%(sign)s: Дневен хороскоп",
+  "horo_sign_date_format": "D MMM",
+  "horo_sign_weekly_details_format": "%(sign)s. Хороскоп на седмицата: %(date)s",
+  "horo_sign_weekly_title_format": "%(sign)s: Седмичен хороскоп",
+  "horoscope": "Хороскоп",
+  "hour": "Час",
+  "html_code": "HTML код",
+  "humidity": "Влажност",
+  "icon_color": "Цвят на изображението",
+  "images": "Изображения",
+  "important_news_in_last_7days": "Важни новини през последните 7 дни",
+  "important_news": "Важни новини",
+  "important": "Важно",
+  "in_country_bg": "България",
+  "info": "Информация",
+  "international": "Международен",
+  "invalid_email": "Невалиден имейл!",
+  "item_color": "Цвят на елемента",
+  "item_conditions": "Атмосферно състояние",
+  "item_pressure": "mmHg",
+  "item_temperatire": "Температура, °C",
+  "item_wind_dir": "Посока на вятъра",
+  "item_wind_speed_ms": "м/с",
+  "item_wind_speed": "Скорост на вятъра. м/с",
+  "latest_events_from_country_format": "Последни събития в %(name)s",
+  "latest_events": "Последни събития",
+  "latest_news": "Последните новини",
+  "latest_quotes_in_media_country_format": "Последните изявления/цитати от пресата - %(country)s",
+  "latest_quotes_in_media": "Последни изявления за пресата",
+  "latest_quotes": "Последните изявления",
+  "line_color": "Цветни линии",
+  "load_more_places": "Повече населени места",
+  "lucky_numbers": "Лъки цифри",
+  "max": "макс",
+  "min": "мин",
+  "mm": "мм",
+  "more_events": "Още събития",
+  "more_quotes": "Още изявления",
+  "more": "Още",
+  "most_important_news_in_last_7days_country_format": "Най-важните новини от пресата в %(country)s през последните 7 дни",
+  "news_bg_app_name": "Ournet Новини",
+  "news_bg_short_app_name": "Новини",
+  "news_site_description_format": "Всички новини от %(country)s. Събития, изявления, тенденции.",
+  "news_site_title_format": "%(country)s новини",
+  "news_sources": "Новини източници",
+  "news_sources_in_country_format": "Новини източници - %(country)s",
+  "add_news_source": "Добавете нов източник",
+  "news_topic_description_format": "%(name)s - Последни новини, истории и дискусии от пресата",
+  "news_topic_page_title_format": "%(name)s - Последни новини",
+  "news": "Новини",
+  "no_days": "Брой дни",
+  "no_thanks": "Не, благодаря",
+  "not_found_places": "Не намерихме място.",
+  "opinia": "Мнение",
+  "photo": "Фото",
+  "place": "Място",
+  "places": "Места",
+  "popular_news": "Популярни новини",
+  "popular": "Популярен",
+  "portal_bg_app_name": "Our.bg",
+  "portal_bg_short_app_name": "Our.bg",
+  "portal_site_description_format": "Всички новини от %(country)s. Събития, изявления, тенденции.",
+  "portal_site_title_format": "%(country)s новини",
+  "position": "Позиция",
+  "preview": "Визуализация",
+  "quotes_about_format": "%(name)s - Изявления",
+  "quotes_by_author_format": "Изявления на %(name)s",
+  "quotes": "Изявления",
+  "read_more_on_source_format": "Прочетете на %(name)s",
+  "recent_search": "Последни търсения",
+  "related_news": "Свързани новини",
+  "save": "Запази",
+  "search_place_format": "Резултати от търсенето по: %(name)s",
+  "search_place_in_adm_cn_format": "Търсене на град в %(region)s, %(country)s",
+  "search_place_in_cn_format": "Търсене на град в %(country)s",
+  "search_place": "Търсене на град",
+  "search_result_format": "Резултати: %(name)s",
+  "share_on_format": "Изпрати на %(name)s",
+  "share_with_your_friends": "Споделете с приятелите си",
+  "show_header": "С титлата",
+  "subscribe_to_daily_notifications": "Абонамент за дневни известия",
+  "subscribe": "Абонирайте",
+  "temperature": "Температура",
+  "text_color": "Цвят на текста",
+  "today": "Днес",
+  "tomorrow": "Утре",
+  "topic_events_title_format": "%(name)s - Събития",
+  "topic_latest_news_format": "%(name)s - Последните новини",
+  "topic_news_title_format": "Новини за %(name)s",
+  "topic_quotes_title_format": "%(name)s - Изявления",
+  "total_subscribers_format": "Общо абонати: %d",
+  "trending": "Тенденции",
+  "useful": "Полезен",
+  "vertical": "Вертикална",
+  "video_news": "Видео новини",
+  "video": "Видео",
+  "views": "гледки",
+  "weather_bg_app_name": "Ournet Времето",
+  "weather_bg_short_app_name": "Времето",
+  "weather_cright": "Прогноза за времето, предоставена от MET Norway",
+  "weather_for_10days": "Прогноза за времето за 10 дни",
+  "weather_home_title_format": "Времето в %(name)s за 10 дни",
+  "weather_in_cn_summary_format": "Прогноза за времето в %(country)s за 10 дни на всяко място",
+  "weather_in_format": "Времето в %(name)s",
+  "weather_notifications_subscribe_for_place_format": "Абонирайте се за предупреждението за времето за %(name)s",
+  "weather_on_your_site_info_format": "Поставете времето на вашия сайт за всяко населено място в %(country)s.",
+  "weather_on_your_site": "Времето в сайта ви",
+  "weather_place_description_format": "Прогноза за времето в %(name1)s, %(name2)s - днес, утре, 10 дни, 7 дни",
+  "weather_place_details_info_format": "Прогноза за времето в %(name1)s, %(name2)s. Времето днес, утре, 3 дни, 7 дни, 10 дни, 15 дни, тези дни. Прогноза за времето за %(name3)s.",
+  "weather_place_title_format_10days_format": "Времето в %(name1)s, прогноза - %(name2)s, 10 дни",
+  "weather_place_title_format": "Времето в %(name1)s, прогноза - %(name2)s",
+  "weather": "Времето",
+  "weather2": "Прогноза за времето",
+  "weekly_horoscope_details_format": "Седмичен хороскоп: %(date)s.",
+  "weekly_horoscope_details": "Седмичен хороскоп. Хороскоп за текущата седмица.",
+  "weekly_horoscope_format": "Седмичен хороскоп: %(date)s",
+  "weekly_horoscope": "Седмичен хороскоп",
+  "weather_around_the_world": "Времето по света",
+  "weekly": "Седмичен",
+  "width": "Широчина",
+  "love": "Обичам",
+  "health": "Здраве",
+  "success": "Успех",
+  "wind": "Вятър"
 }
