--- a/locales/hu.json
+++ b/locales/hu.json
@@ -1,182 +1,196 @@
 {
-    "24_hrs": "24 óra",
-    "accept_notifications": "Fogadja értesítések",
-    "ads": "Reklám",
-    "back_color": "Vissza szín",
-    "base_color": "Alapszín",
-    "border_color": "Határszín",
-    "configuration": "Konfigurációja",
-    "contact": "Kontakt",
-    "count_news_format": [[0, 0,"%d hír"],[1,1,"egy hír"],[2,null,"%d hír"]],
-    "count_places_format": [[0,0,"%d hely"],[1,1,"egy hely"],[2,null,"+%d hely"]],
-    "count_views_format": [[0,0,"%d oldalnézet"],[1,1,"oldalnézet"],[2,null,"%d oldalnézet"]],
-    "country_al": "Albánia",
-    "country_bg": "Bulgária",
-    "country_cz": "Cseh Köztársaság",
-    "country_hu": "Magyarország",
-    "country_in": "India",
-    "country_it": "Olaszország",
-    "country_md": "Moldova",
-    "weather_around_the_world": "Időjárás szerte a világon",
-    "country_pl": "Lengyelország",
-    "country_ro": "Románia",
-    "country_ru": "Oroszország",
-    "country_tr": "Törökország",
-    "country_lv": "Lettország",
-    "country_kz": "Kazahsztán",
-    "daily_horoscope_details_format": "Hapi horoszkóp: %(name)s.",
-    "daily_horoscope_details": "Hapi horoszkóp. Horoszkóp ma és holnap.",
-    "daily_horoscope_format": "Horoszkóp: %(name)s",
-    "daily_horoscope": "Hapi horoszkóp",
-    "daily": "Napi",
-    "date_format": "D MMMM",
-    "day_format": "dddd, D MMMM",
-    "days": "nap",
-    "detailed_horoscope": "Részletes horoszkóp",
-    "error_404_info": "Az oldal nem található",
-    "error_500_info": "Ismeretlen hiba",
-    "error_description": "Hiba történt. Próbálja később.",
-    "error": "Hiba",
-    "events_from_country_format": "%(name)s Események",
-    "events": "Események",
-    "exchange_rates": "Árfolyamok",
-    "exchange": "Csere",
-    "export_horoscope": "Export horoszkóp",
-    "forecast_no_data": "Próbálja újra néhány perc múlva.",
-    "forecast_on_email_place_format": "%(name)s: Időjárás e-mailben.",
-    "foto_video_from_event_format": "Fotó és videó: %(name)s",
-    "generate": "Generál",
-    "head_back_color": "Fejszín hátszín",
-    "head_text_color": "A fejléc szövegszíne",
-    "heigth": "Magasság",
-    "home": "Home",
-    "horizontal": "Vízszintes",
-    "horo_api_title": "Horoszkóp API",
-    "horoscope_hu_app_name": "Ournet Horoszkóp",
-    "horoscope_hu_short_app_name": "Horoszkóp",
-    "horo_notifications_subscribe_for_sign_format": "%(name)s: Napi értesítéseket kap",
-    "horo_on_your_site_info": "Ingyenes napi horoszkóp a webhelyén",
-    "horo_on_your_site": "Horoszkóp a webhelyén",
-    "horo_sign_daily_details_format": "%(sign)s. A nap horoszkópja: %(date)s",
-    "horo_sign_daily_title_format": "%(sign)s: Napi horoszkóp",
-    "horo_sign_date_format": "D MMM",
-    "horo_sign_weekly_details_format": "%(sign)s. A hét horoszkópja: %(date)s",
-    "horo_sign_weekly_title_format": "%(sign)s: Heti horoszkóp",
-    "horoscope": "Horoszkóp",
-    "hour": "Óra",
-    "html_code": "HTML kód",
-    "humidity": "Páratartalom",
-    "icon_color": "Ikonszín",
-    "images": "Képek",
-    "important_news_in_last_7days": "Fontos hírek az elmúlt 7 napban",
-    "important_news": "Fontos hírek",
-    "important": "Fontos",
-    "in_country_hu": "Magyarországon",
-    "info": "Információ",
-    "international": "Nemzetközi",
-    "invalid_email": "Érvénytelen e-mail!",
-    "item_color": "Tétel színe",
-    "item_conditions": "Előrejelzés",
-    "item_pressure": "mmHg",
-    "item_temperatire": "Hőmérséklet, °C",
-    "item_wind_dir": "Szélirány",
-    "item_wind_speed_ms": "m/s",
-    "item_wind_speed": "Szélsebesség. m/s",
-    "latest_events_from_country_format": "%(name)s legújabb eseményei",
-    "latest_events": "Legfrissebb események",
-    "latest_news": "Legfrissebb hírek",
-    "latest_quotes_in_media_country_format": "Legfrissebb nyilatkozatai/idézetek a sajtóból - %(country)s",
-    "latest_quotes_in_media": "Legfrissebb nyilatkozatai a sajtóban",
-    "latest_quotes": "Legfrissebb állítások",
-    "line_color": "Vonalszín",
-    "load_more_places": "Több hely",
-    "lucky_numbers": "Szerencsés számok",
-    "max": "max",
-    "min": "min",
-    "mm": "mm",
-    "more_events": "További események",
-    "more_quotes": "További nyilatkozatok",
-    "more": "Több",
-    "most_important_news_in_last_7days_country_format": "%(country)s legfontosabb hírei az elmúlt 7 napban",
-    "news_hu_app_name": "Ournet Hírek",
-    "news_hu_short_app_name": "Hírek",
-    "news_site_description_format": "%(country)s hírek. Események, kijelentések, trendek.",
-    "news_site_title_format": "%(country)s Hírek",
-    "news_sources": "Hírforrások",
-    "news_topic_description_format": "Legfrissebb hírek és események a sajtóban - %(name)s",
-    "news_topic_page_title_format": "%(name)s - Friss hírek",
-    "news": "Hírek",
-    "no_days": "Nem napok",
-    "no_thanks": "Nem köszönöm",
-    "not_found_places": "Nem találtunk helyet.",
-    "opinia": "Vélemény",
-    "photo": "Fénykép",
-    "place": "Hely",
-    "places": "Helyek",
-    "popular_news": "Népszerű hírek",
-    "popular": "Népszerű",
-    "portal_hu_app_name": "Ournet.hu",
-    "portal_hu_short_app_name": "Ournet",
-    "portal_site_description_format": "%(country)s hírek. Események, kijelentések, trendek.",
-    "portal_site_title_format": "%(country)s Friss Hírek",
-    "position": "Pozíció",
-    "preview": "Előnézet",
-    "quotes_about_format": "%(name)s nyilatkozatok",
-    "quotes_by_author_format": "%(name)s kijelentései",
-    "quotes": "Idézetek",
-    "read_more_on_source_format": "Olvassa el a %(name)s",
-    "recent_search": "Legutóbbi keresések",
-    "related_news": "Kapcsolódó hírek",
-    "save": "Mentés",
-    "search_place_format": "Keresési eredmények: %(name)s",
-    "search_place_in_adm_cn_format": "Hely keresése: %(region)s, %(country)s",
-    "search_place_in_cn_format": "Hely keresése: %(country)s",
-    "search_place": "Hely keresése",
-    "search_result_format": "Eredmények: %(name)s",
-    "share_on_format": "Küldés: %(name)s",
-    "share_with_your_friends": "Oszd meg a barátaiddal",
-    "show_header": "A fejléc megjelenítése",
-    "subscribe_to_daily_notifications": "Feliratkozás a napi értesítésekre",
-    "subscribe": "Iratkozz fel",
-    "temperature": "Hőmérséklet",
-    "text_color": "Szöveg szín",
-    "today": "Ma",
-    "tomorrow": "Holnap",
-    "topic_events_title_format": "%(name)s - Események",
-    "topic_latest_news_format": "%(name)s - Friss hírek",
-    "topic_news_title_format": "%(name)s hírek",
-    "topic_quotes_title_format": "%(name)s - Idézetek",
-    "total_subscribers_format": "Előfizetőknek: %d",
-    "trending": "Felkapott",
-    "useful": "Hasznos",
-    "vertical": "Függőleges",
-    "video_news": "Videó hírek",
-    "video": "Videó",
-    "views": "nézetek",
-    "weather_hu_app_name": "Ournet Időjárás",
-    "weather_hu_short_app_name": "Időjárás",
-    "weather_cright": "Időjárás előrejelzés a MET Norway",
-    "weather_for_10days": "Időjárás előrejelzés 10 napra",
-    "weather_home_title_format": "Időjárás %(name)s 10 napig",
-    "weather_in_cn_summary_format": "Időjárás %(country)s 10 napra bármely városban",
-    "weather_in_format": "%(name)s időjárás",
-    "weather_notifications_subscribe_for_place_format": "Feliratkozás az időjárás figyelmeztetésére: %(name)s",
-    "weather_on_your_site_info_format": "Töltsd be az időjárás a webhelyedre bármely településen - %(country)s.",
-    "weather_on_your_site": "Időjárás a webhelyén",
-    "weather_place_description_format": "%(name1)s, %(name2)s Időjárás: ma, holnap, 10 nap, 7 nap",
-    "weather_place_details_info_format": "%(name1)s, %(name2)s Időjárás előrejelzés: ma, holnap, 3 nap, 7 nap, 10 nap, 15 nap, ezekben a napokban. %(name3)s Időjárás.",
-    "weather_place_title_format_10days_format": "%(name1)s Időjárás előrejelzés %(name2)s, 10 nap",
-    "weather_place_title_format": "%(name1)s Időjárás előrejelzés %(name2)s",
-    "weather": "Időjárás",
-    "weather2": "Előrejelzés",
-    "weekly_horoscope_details_format": "Heti horoszkóp: %(date)s.",
-    "weekly_horoscope_details": "Heti horoszkóp. Horoszkóp az aktuális héten.",
-    "weekly_horoscope_format": "Heti horoszkóp: %(date)s",
-    "weekly_horoscope": "Heti horoszkóp",
-    "weekly": "Heti",
-    "width": "Szélesség",
-    "love": "Szeretet",
-    "health": "Egészség",
-    "success": "Siker",
-    "wind": "Szél"
+  "24_hrs": "24 óra",
+  "accept_notifications": "Fogadja értesítések",
+  "ads": "Reklám",
+  "back_color": "Vissza szín",
+  "base_color": "Alapszín",
+  "border_color": "Határszín",
+  "configuration": "Konfigurációja",
+  "contact": "Kontakt",
+  "count_news_format": [
+    [0, 0, "%d hír"],
+    [1, 1, "egy hír"],
+    [2, null, "%d hír"]
+  ],
+  "count_places_format": [
+    [0, 0, "%d hely"],
+    [1, 1, "egy hely"],
+    [2, null, "+%d hely"]
+  ],
+  "count_views_format": [
+    [0, 0, "%d oldalnézet"],
+    [1, 1, "oldalnézet"],
+    [2, null, "%d oldalnézet"]
+  ],
+  "country_al": "Albánia",
+  "country_bg": "Bulgária",
+  "country_cz": "Cseh Köztársaság",
+  "country_hu": "Magyarország",
+  "country_in": "India",
+  "country_it": "Olaszország",
+  "country_md": "Moldova",
+  "weather_around_the_world": "Időjárás szerte a világon",
+  "country_pl": "Lengyelország",
+  "country_ro": "Románia",
+  "country_ru": "Oroszország",
+  "country_tr": "Törökország",
+  "country_lv": "Lettország",
+  "country_kz": "Kazahsztán",
+  "daily_horoscope_details_format": "Hapi horoszkóp: %(name)s.",
+  "daily_horoscope_details": "Hapi horoszkóp. Horoszkóp ma és holnap.",
+  "daily_horoscope_format": "Horoszkóp: %(name)s",
+  "daily_horoscope": "Hapi horoszkóp",
+  "daily": "Napi",
+  "date_format": "D MMMM",
+  "day_format": "dddd, D MMMM",
+  "days": "nap",
+  "detailed_horoscope": "Részletes horoszkóp",
+  "error_404_info": "Az oldal nem található",
+  "error_500_info": "Ismeretlen hiba",
+  "error_description": "Hiba történt. Próbálja később.",
+  "error": "Hiba",
+  "events_from_country_format": "%(name)s Események",
+  "events": "Események",
+  "exchange_rates": "Árfolyamok",
+  "exchange": "Csere",
+  "export_horoscope": "Export horoszkóp",
+  "forecast_no_data": "Próbálja újra néhány perc múlva.",
+  "forecast_on_email_place_format": "%(name)s: Időjárás e-mailben.",
+  "foto_video_from_event_format": "Fotó és videó: %(name)s",
+  "generate": "Generál",
+  "head_back_color": "Fejszín hátszín",
+  "head_text_color": "A fejléc szövegszíne",
+  "heigth": "Magasság",
+  "home": "Home",
+  "horizontal": "Vízszintes",
+  "horo_api_title": "Horoszkóp API",
+  "horoscope_hu_app_name": "Ournet Horoszkóp",
+  "horoscope_hu_short_app_name": "Horoszkóp",
+  "horo_notifications_subscribe_for_sign_format": "%(name)s: Napi értesítéseket kap",
+  "horo_on_your_site_info": "Ingyenes napi horoszkóp a webhelyén",
+  "horo_on_your_site": "Horoszkóp a webhelyén",
+  "horo_sign_daily_details_format": "%(sign)s. A nap horoszkópja: %(date)s",
+  "horo_sign_daily_title_format": "%(sign)s: Napi horoszkóp",
+  "horo_sign_date_format": "D MMM",
+  "horo_sign_weekly_details_format": "%(sign)s. A hét horoszkópja: %(date)s",
+  "horo_sign_weekly_title_format": "%(sign)s: Heti horoszkóp",
+  "horoscope": "Horoszkóp",
+  "hour": "Óra",
+  "html_code": "HTML kód",
+  "humidity": "Páratartalom",
+  "icon_color": "Ikonszín",
+  "images": "Képek",
+  "important_news_in_last_7days": "Fontos hírek az elmúlt 7 napban",
+  "important_news": "Fontos hírek",
+  "important": "Fontos",
+  "in_country_hu": "Magyarországon",
+  "info": "Információ",
+  "international": "Nemzetközi",
+  "invalid_email": "Érvénytelen e-mail!",
+  "item_color": "Tétel színe",
+  "item_conditions": "Előrejelzés",
+  "item_pressure": "mmHg",
+  "item_temperatire": "Hőmérséklet, °C",
+  "item_wind_dir": "Szélirány",
+  "item_wind_speed_ms": "m/s",
+  "item_wind_speed": "Szélsebesség. m/s",
+  "latest_events_from_country_format": "%(name)s legújabb eseményei",
+  "latest_events": "Legfrissebb események",
+  "latest_news": "Legfrissebb hírek",
+  "latest_quotes_in_media_country_format": "Legfrissebb nyilatkozatai/idézetek a sajtóból - %(country)s",
+  "latest_quotes_in_media": "Legfrissebb nyilatkozatai a sajtóban",
+  "latest_quotes": "Legfrissebb állítások",
+  "line_color": "Vonalszín",
+  "load_more_places": "Több hely",
+  "lucky_numbers": "Szerencsés számok",
+  "max": "max",
+  "min": "min",
+  "mm": "mm",
+  "more_events": "További események",
+  "more_quotes": "További nyilatkozatok",
+  "more": "Több",
+  "most_important_news_in_last_7days_country_format": "%(country)s legfontosabb hírei az elmúlt 7 napban",
+  "news_hu_app_name": "Ournet Hírek",
+  "news_hu_short_app_name": "Hírek",
+  "news_site_description_format": "%(country)s hírek. Események, kijelentések, trendek.",
+  "news_site_title_format": "%(country)s Hírek",
+  "news_sources": "Hírforrások",
+  "news_sources_in_country_format": "Hírforrások - %(country)s",
+  "add_news_source": "Új forrás hozzáadása",
+  "news_topic_description_format": "Legfrissebb hírek és események a sajtóban - %(name)s",
+  "news_topic_page_title_format": "%(name)s - Friss hírek",
+  "news": "Hírek",
+  "no_days": "Nem napok",
+  "no_thanks": "Nem köszönöm",
+  "not_found_places": "Nem találtunk helyet.",
+  "opinia": "Vélemény",
+  "photo": "Fénykép",
+  "place": "Hely",
+  "places": "Helyek",
+  "popular_news": "Népszerű hírek",
+  "popular": "Népszerű",
+  "portal_hu_app_name": "Ournet.hu",
+  "portal_hu_short_app_name": "Ournet",
+  "portal_site_description_format": "%(country)s hírek. Események, kijelentések, trendek.",
+  "portal_site_title_format": "%(country)s Friss Hírek",
+  "position": "Pozíció",
+  "preview": "Előnézet",
+  "quotes_about_format": "%(name)s nyilatkozatok",
+  "quotes_by_author_format": "%(name)s kijelentései",
+  "quotes": "Idézetek",
+  "read_more_on_source_format": "Olvassa el a %(name)s",
+  "recent_search": "Legutóbbi keresések",
+  "related_news": "Kapcsolódó hírek",
+  "save": "Mentés",
+  "search_place_format": "Keresési eredmények: %(name)s",
+  "search_place_in_adm_cn_format": "Hely keresése: %(region)s, %(country)s",
+  "search_place_in_cn_format": "Hely keresése: %(country)s",
+  "search_place": "Hely keresése",
+  "search_result_format": "Eredmények: %(name)s",
+  "share_on_format": "Küldés: %(name)s",
+  "share_with_your_friends": "Oszd meg a barátaiddal",
+  "show_header": "A fejléc megjelenítése",
+  "subscribe_to_daily_notifications": "Feliratkozás a napi értesítésekre",
+  "subscribe": "Iratkozz fel",
+  "temperature": "Hőmérséklet",
+  "text_color": "Szöveg szín",
+  "today": "Ma",
+  "tomorrow": "Holnap",
+  "topic_events_title_format": "%(name)s - Események",
+  "topic_latest_news_format": "%(name)s - Friss hírek",
+  "topic_news_title_format": "%(name)s hírek",
+  "topic_quotes_title_format": "%(name)s - Idézetek",
+  "total_subscribers_format": "Előfizetőknek: %d",
+  "trending": "Felkapott",
+  "useful": "Hasznos",
+  "vertical": "Függőleges",
+  "video_news": "Videó hírek",
+  "video": "Videó",
+  "views": "nézetek",
+  "weather_hu_app_name": "Ournet Időjárás",
+  "weather_hu_short_app_name": "Időjárás",
+  "weather_cright": "Időjárás előrejelzés a MET Norway",
+  "weather_for_10days": "Időjárás előrejelzés 10 napra",
+  "weather_home_title_format": "Időjárás %(name)s 10 napig",
+  "weather_in_cn_summary_format": "Időjárás %(country)s 10 napra bármely városban",
+  "weather_in_format": "%(name)s időjárás",
+  "weather_notifications_subscribe_for_place_format": "Feliratkozás az időjárás figyelmeztetésére: %(name)s",
+  "weather_on_your_site_info_format": "Töltsd be az időjárás a webhelyedre bármely településen - %(country)s.",
+  "weather_on_your_site": "Időjárás a webhelyén",
+  "weather_place_description_format": "%(name1)s, %(name2)s Időjárás: ma, holnap, 10 nap, 7 nap",
+  "weather_place_details_info_format": "%(name1)s, %(name2)s Időjárás előrejelzés: ma, holnap, 3 nap, 7 nap, 10 nap, 15 nap, ezekben a napokban. %(name3)s Időjárás.",
+  "weather_place_title_format_10days_format": "%(name1)s Időjárás előrejelzés %(name2)s, 10 nap",
+  "weather_place_title_format": "%(name1)s Időjárás előrejelzés %(name2)s",
+  "weather": "Időjárás",
+  "weather2": "Előrejelzés",
+  "weekly_horoscope_details_format": "Heti horoszkóp: %(date)s.",
+  "weekly_horoscope_details": "Heti horoszkóp. Horoszkóp az aktuális héten.",
+  "weekly_horoscope_format": "Heti horoszkóp: %(date)s",
+  "weekly_horoscope": "Heti horoszkóp",
+  "weekly": "Heti",
+  "width": "Szélesség",
+  "love": "Szeretet",
+  "health": "Egészség",
+  "success": "Siker",
+  "wind": "Szél"
 }
