--- a/locales/lv.json
+++ b/locales/lv.json
@@ -1,182 +1,196 @@
 {
-    "24_hrs": "24 stundas",
-    "accept_notifications": "Pieņemt paziņojumus",
-    "ads": "Reklāmas",
-    "back_color": "Fona krāsa",
-    "base_color": "Bāzes krāsa",
-    "border_color": "Robežas krāsa",
-    "configuration": "Konfigurācija",
-    "contact": "Kontakti",
-    "count_news_format": [[0, 0,"%d ziņas"],[1,1,"%d ziņas"],[2,null,"%d ziņas"]],
-    "count_places_format": [[0,0,"%d vietas"],[1,1,"vieta"],[2,null,"+%d vietas"]],
-    "count_views_format": [[0,0,"%d skatījumi"],[1,1,"1 skats"],[2,null,"%d skatījumi"]],
-    "country_al": "Albānija",
-    "country_bg": "Bulgārija",
-    "country_cz": "Čehu Republika",
-    "country_hu": "Ungārija",
-    "country_in": "Indija",
-    "country_it": "Itālija",
-    "country_md": "Moldova",
-    "weather_around_the_world": "Laika ziņas visā pasaulē",
-    "country_pl": "Polija",
-    "country_ro": "Rumānija",
-    "country_ru": "Krievija",
-    "country_tr": "Turcija",
-    "country_lv": "Latvija",
-    "country_kz": "Kazahstāna",
-    "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
-    "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
-    "daily_horoscope_format": "Horoscope: %(name)s",
-    "daily_horoscope": "Daily Horoscope",
-    "daily": "Katru dienu",
-    "date_format": "MMMM, D",
-    "day_format": "dddd, MMM D",
-    "days": "dienas",
-    "detailed_horoscope": "Detailed horoscope",
-    "error_404_info": "Lapa netika atrasta",
-    "error_500_info": "Nezināma kļūda",
-    "error_description": "Radusies kļūda. Izmēģiniet vēlāk.",
-    "error": "Kļūda",
-    "events_from_country_format": "Events from %(name)s",
-    "events": "Events",
-    "exchange_rates": "Exchange rates",
-    "exchange": "Exchange",
-    "export_horoscope": "Export horoscope",
-    "forecast_no_data": "Lūdzu, pēc dažām minūtēm mēģiniet vēlreiz.",
-    "forecast_on_email_place_format": "Laiks %(name)s pa e-pastu.",
-    "foto_video_from_event_format": "Foto un video: %(name)s",
-    "generate": "Izveidot",
-    "head_back_color": "Galvenes fona krāsa",
-    "head_text_color": "Galvenes teksta krāsa",
-    "heigth": "Augstums",
-    "home": "Mājas",
-    "horizontal": "Horizontāls",
-    "horo_api_title": "Horoscope API",
-    "horoscope_lv_app_name": "Ournet Horoscope",
-    "horoscope_lv_short_app_name": "Horoscope",
-    "horo_notifications_subscribe_for_sign_format": "%(name)s: Get daily notifications",
-    "horo_on_your_site_info": "Free daily horoscope on your site",
-    "horo_on_your_site": "Horoscope on your site",
-    "horo_sign_daily_details_format": "%(sign)s. Horoscope of the day: %(date)s",
-    "horo_sign_daily_title_format": "%(sign)s: Daily Horoscope",
-    "horo_sign_date_format": "MMM, D",
-    "horo_sign_weekly_details_format": "%(sign)s. Horoscope of the week: %(date)s",
-    "horo_sign_weekly_title_format": "%(sign)s: Weekly Horoscope",
-    "horoscope": "Horoscope",
-    "hour": "Stunda",
-    "html_code": "HTML kods",
-    "humidity": "Mitrums",
-    "icon_color": "Ikonas krāsa",
-    "images": "Attēli",
-    "important_news_in_last_7days": "Important news for the last 7 days",
-    "important_news": "Important news",
-    "important": "Svarīgs",
-    "in_country_lv": "Latvijā",
-    "info": "Informācija",
-    "international": "Starptautiskā",
-    "invalid_email": "Nepareizs e-pasts!",
-    "item_color": "Vienuma krāsa",
-    "item_conditions": "Prognoze",
-    "item_pressure": "mmHg",
-    "item_temperatire": "Temperatūra, °C",
-    "item_wind_dir": "Vēja virziens",
-    "item_wind_speed_ms": "m/s",
-    "item_wind_speed": "Vēja ātrums. m/s",
-    "latest_events_from_country_format": "Latest events in %(name)s",
-    "latest_events": "Latest events",
-    "latest_news": "Latest news",
-    "latest_quotes_in_media_country_format": "Latest statements/quotes from the press - %(country)s",
-    "latest_quotes_in_media": "Latest statements in the press",
-    "latest_quotes": "Latest statements",
-    "line_color": "Līnijas krāsa",
-    "load_more_places": "Ielādējiet vairāk vietas",
-    "lucky_numbers": "Laimīgie numuri",
-    "max": "max",
-    "min": "min",
-    "mm": "mm",
-    "more_events": "More events",
-    "more_quotes": "More statements",
-    "more": "Vairāk",
-    "most_important_news_in_last_7days_country_format": "The most important news in %(country)s for the last 7 days",
-    "news_lv_app_name": "Ournet News",
-    "news_lv_short_app_name": "News",
-    "news_site_description_format": "All news from %(country)s. Events, statements, trends.",
-    "news_site_title_format": "%(country)s News",
-    "news_sources": "News sources",
-    "news_topic_description_format": "Latest news and events in the press about %(name)s",
-    "news_topic_page_title_format": "%(name)s - Latest News",
-    "news": "News",
-    "no_days": "Numuru dienas",
-    "no_thanks": "Nē paldies",
-    "not_found_places": "Mēs neesam atraduši nevienu vietu.",
-    "opinia": "Opinia",
-    "photo": "Fotoattēls",
-    "place": "Vieta",
-    "places": "Vietas",
-    "popular_news": "Popular News",
-    "popular": "Popular",
-    "portal_lv_app_name": "Ournet.in",
-    "portal_lv_short_app_name": "Ournet",
-    "portal_site_description_format": "All news from %(country)s. Events, statements, trends.",
-    "portal_site_title_format": "Latest %(country)s News",
-    "position": "Pozīcija",
-    "preview": "Priekšskatījums",
-    "quotes_about_format": "Statements about %(name)s",
-    "quotes_by_author_format": "Statements by %(name)s",
-    "quotes": "Statements",
-    "read_more_on_source_format": "Read on %(name)s",
-    "recent_search": "Recent searches",
-    "related_news": "Related News",
-    "save": "Saglabāt",
-    "search_place_format": "Meklēšanas rezultāti pēc: %(name)s",
-    "search_place_in_adm_cn_format": "Meklēt vietu: %(region)s, %(country)s",
-    "search_place_in_cn_format": "Meklēt vietu: %(country)s",
-    "search_place": "Meklēt vietu",
-    "search_result_format": "Rezultāti: %(name)s",
-    "share_on_format": "Sūtīt %(name)s",
-    "share_with_your_friends": "Dalieties ar draugiem",
-    "show_header": "Rādīt galveni",
-    "subscribe_to_daily_notifications": "Abonējiet ikdienas paziņojumus",
-    "subscribe": "Abonēt",
-    "temperature": "Temperatūra",
-    "text_color": "Teksta krāsa",
-    "today": "Šodien",
-    "tomorrow": "Rīt",
-    "topic_events_title_format": "%(name)s - Events",
-    "topic_latest_news_format": "%(name)s - Latest News",
-    "topic_news_title_format": "News about %(name)s",
-    "topic_quotes_title_format": "%(name)s - Statements",
-    "total_subscribers_format": "Abonenti: %d",
-    "trending": "Tendences",
-    "useful": "Noderīgi",
-    "vertical": "Vertikāli",
-    "video_news": "Video News",
-    "video": "Video",
-    "views": "skati",
-    "weather_lv_app_name": "Laikapstākļi",
-    "weather_lv_short_app_name": "Laikapstākļi",
-    "weather_cright": "Weather forecast provided by MET Norway",
-    "weather_for_10days": "Laika prognoze 10 dienām",
-    "weather_home_title_format": "%(name)s laikapstākļi 10 dienas",
-    "weather_in_cn_summary_format": "%(country)s laikapstākļi 10 dienas jebkurā pilsētā",
-    "weather_in_format": "%(name)s laikapstākļi",
-    "weather_notifications_subscribe_for_place_format": "Parakstīties uz laika brīdinājumu: %(name)s",
-    "weather_on_your_site_info_format": "Novietojiet laika apstākļus jūsu vietnē jebkurai vietai (%(country)s).",
-    "weather_on_your_site": "Laika ziņas jūsu vietnē",
-    "weather_place_description_format": "Laika prognoze %(name1)s, %(name2)s -šodien, rīt, 10 dienas, 7 dienas",
-    "weather_place_details_info_format": "Laika ziņas %(name1)s, %(name2)s šodien, rīt, 3 dienas, 7 dienas, 10 dienas, 15 dienas, šajās dienās. Prognoze %(name3)s.",
-    "weather_place_title_format_10days_format": "%(name1)s laika prognoze %(name2)s, 10 dienas",
-    "weather_place_title_format": "%(name1)s laika prognoze %(name2)s laikapstākļi",
-    "weather": "Laikapstākļi",
-    "weather2": "Prognoze",
-    "weekly_horoscope_details_format": "Weekly Horoscope: %(date)s.",
-    "weekly_horoscope_details": "Weekly Horoscope. Horoscope for the current week.",
-    "weekly_horoscope_format": "Weekly Horoscope: %(date)s",
-    "weekly_horoscope": "Weekly Horoscope",
-    "weekly": "Weekly",
-    "width": "Platums",
-    "love": "Mīlestība",
-    "health": "Veselība",
-    "success": "Panākumi",
-    "wind": "Vējš"
+  "24_hrs": "24 stundas",
+  "accept_notifications": "Pieņemt paziņojumus",
+  "ads": "Reklāmas",
+  "back_color": "Fona krāsa",
+  "base_color": "Bāzes krāsa",
+  "border_color": "Robežas krāsa",
+  "configuration": "Konfigurācija",
+  "contact": "Kontakti",
+  "count_news_format": [
+    [0, 0, "%d ziņas"],
+    [1, 1, "%d ziņas"],
+    [2, null, "%d ziņas"]
+  ],
+  "count_places_format": [
+    [0, 0, "%d vietas"],
+    [1, 1, "vieta"],
+    [2, null, "+%d vietas"]
+  ],
+  "count_views_format": [
+    [0, 0, "%d skatījumi"],
+    [1, 1, "1 skats"],
+    [2, null, "%d skatījumi"]
+  ],
+  "country_al": "Albānija",
+  "country_bg": "Bulgārija",
+  "country_cz": "Čehu Republika",
+  "country_hu": "Ungārija",
+  "country_in": "Indija",
+  "country_it": "Itālija",
+  "country_md": "Moldova",
+  "weather_around_the_world": "Laika ziņas visā pasaulē",
+  "country_pl": "Polija",
+  "country_ro": "Rumānija",
+  "country_ru": "Krievija",
+  "country_tr": "Turcija",
+  "country_lv": "Latvija",
+  "country_kz": "Kazahstāna",
+  "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
+  "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
+  "daily_horoscope_format": "Horoscope: %(name)s",
+  "daily_horoscope": "Daily Horoscope",
+  "daily": "Katru dienu",
+  "date_format": "MMMM, D",
+  "day_format": "dddd, MMM D",
+  "days": "dienas",
+  "detailed_horoscope": "Detailed horoscope",
+  "error_404_info": "Lapa netika atrasta",
+  "error_500_info": "Nezināma kļūda",
+  "error_description": "Radusies kļūda. Izmēģiniet vēlāk.",
+  "error": "Kļūda",
+  "events_from_country_format": "Events from %(name)s",
+  "events": "Events",
+  "exchange_rates": "Exchange rates",
+  "exchange": "Exchange",
+  "export_horoscope": "Export horoscope",
+  "forecast_no_data": "Lūdzu, pēc dažām minūtēm mēģiniet vēlreiz.",
+  "forecast_on_email_place_format": "Laiks %(name)s pa e-pastu.",
+  "foto_video_from_event_format": "Foto un video: %(name)s",
+  "generate": "Izveidot",
+  "head_back_color": "Galvenes fona krāsa",
+  "head_text_color": "Galvenes teksta krāsa",
+  "heigth": "Augstums",
+  "home": "Mājas",
+  "horizontal": "Horizontāls",
+  "horo_api_title": "Horoscope API",
+  "horoscope_lv_app_name": "Ournet Horoscope",
+  "horoscope_lv_short_app_name": "Horoscope",
+  "horo_notifications_subscribe_for_sign_format": "%(name)s: Get daily notifications",
+  "horo_on_your_site_info": "Free daily horoscope on your site",
+  "horo_on_your_site": "Horoscope on your site",
+  "horo_sign_daily_details_format": "%(sign)s. Horoscope of the day: %(date)s",
+  "horo_sign_daily_title_format": "%(sign)s: Daily Horoscope",
+  "horo_sign_date_format": "MMM, D",
+  "horo_sign_weekly_details_format": "%(sign)s. Horoscope of the week: %(date)s",
+  "horo_sign_weekly_title_format": "%(sign)s: Weekly Horoscope",
+  "horoscope": "Horoscope",
+  "hour": "Stunda",
+  "html_code": "HTML kods",
+  "humidity": "Mitrums",
+  "icon_color": "Ikonas krāsa",
+  "images": "Attēli",
+  "important_news_in_last_7days": "Important news for the last 7 days",
+  "important_news": "Important news",
+  "important": "Svarīgs",
+  "in_country_lv": "Latvijā",
+  "info": "Informācija",
+  "international": "Starptautiskā",
+  "invalid_email": "Nepareizs e-pasts!",
+  "item_color": "Vienuma krāsa",
+  "item_conditions": "Prognoze",
+  "item_pressure": "mmHg",
+  "item_temperatire": "Temperatūra, °C",
+  "item_wind_dir": "Vēja virziens",
+  "item_wind_speed_ms": "m/s",
+  "item_wind_speed": "Vēja ātrums. m/s",
+  "latest_events_from_country_format": "Latest events in %(name)s",
+  "latest_events": "Latest events",
+  "latest_news": "Latest news",
+  "latest_quotes_in_media_country_format": "Latest statements/quotes from the press - %(country)s",
+  "latest_quotes_in_media": "Latest statements in the press",
+  "latest_quotes": "Latest statements",
+  "line_color": "Līnijas krāsa",
+  "load_more_places": "Ielādējiet vairāk vietas",
+  "lucky_numbers": "Laimīgie numuri",
+  "max": "max",
+  "min": "min",
+  "mm": "mm",
+  "more_events": "More events",
+  "more_quotes": "More statements",
+  "more": "Vairāk",
+  "most_important_news_in_last_7days_country_format": "The most important news in %(country)s for the last 7 days",
+  "news_lv_app_name": "Ournet News",
+  "news_lv_short_app_name": "News",
+  "news_site_description_format": "All news from %(country)s. Events, statements, trends.",
+  "news_site_title_format": "%(country)s News",
+  "news_sources": "News sources",
+  "news_sources_in_country_format": "News sources in %(country)s",
+  "add_news_source": "Add new source",
+  "news_topic_description_format": "Latest news and events in the press about %(name)s",
+  "news_topic_page_title_format": "%(name)s - Latest News",
+  "news": "News",
+  "no_days": "Numuru dienas",
+  "no_thanks": "Nē paldies",
+  "not_found_places": "Mēs neesam atraduši nevienu vietu.",
+  "opinia": "Opinia",
+  "photo": "Fotoattēls",
+  "place": "Vieta",
+  "places": "Vietas",
+  "popular_news": "Popular News",
+  "popular": "Popular",
+  "portal_lv_app_name": "Ournet.in",
+  "portal_lv_short_app_name": "Ournet",
+  "portal_site_description_format": "All news from %(country)s. Events, statements, trends.",
+  "portal_site_title_format": "Latest %(country)s News",
+  "position": "Pozīcija",
+  "preview": "Priekšskatījums",
+  "quotes_about_format": "Statements about %(name)s",
+  "quotes_by_author_format": "Statements by %(name)s",
+  "quotes": "Statements",
+  "read_more_on_source_format": "Read on %(name)s",
+  "recent_search": "Recent searches",
+  "related_news": "Related News",
+  "save": "Saglabāt",
+  "search_place_format": "Meklēšanas rezultāti pēc: %(name)s",
+  "search_place_in_adm_cn_format": "Meklēt vietu: %(region)s, %(country)s",
+  "search_place_in_cn_format": "Meklēt vietu: %(country)s",
+  "search_place": "Meklēt vietu",
+  "search_result_format": "Rezultāti: %(name)s",
+  "share_on_format": "Sūtīt %(name)s",
+  "share_with_your_friends": "Dalieties ar draugiem",
+  "show_header": "Rādīt galveni",
+  "subscribe_to_daily_notifications": "Abonējiet ikdienas paziņojumus",
+  "subscribe": "Abonēt",
+  "temperature": "Temperatūra",
+  "text_color": "Teksta krāsa",
+  "today": "Šodien",
+  "tomorrow": "Rīt",
+  "topic_events_title_format": "%(name)s - Events",
+  "topic_latest_news_format": "%(name)s - Latest News",
+  "topic_news_title_format": "News about %(name)s",
+  "topic_quotes_title_format": "%(name)s - Statements",
+  "total_subscribers_format": "Abonenti: %d",
+  "trending": "Tendences",
+  "useful": "Noderīgi",
+  "vertical": "Vertikāli",
+  "video_news": "Video News",
+  "video": "Video",
+  "views": "skati",
+  "weather_lv_app_name": "Laikapstākļi",
+  "weather_lv_short_app_name": "Laikapstākļi",
+  "weather_cright": "Weather forecast provided by MET Norway",
+  "weather_for_10days": "Laika prognoze 10 dienām",
+  "weather_home_title_format": "%(name)s laikapstākļi 10 dienas",
+  "weather_in_cn_summary_format": "%(country)s laikapstākļi 10 dienas jebkurā pilsētā",
+  "weather_in_format": "%(name)s laikapstākļi",
+  "weather_notifications_subscribe_for_place_format": "Parakstīties uz laika brīdinājumu: %(name)s",
+  "weather_on_your_site_info_format": "Novietojiet laika apstākļus jūsu vietnē jebkurai vietai (%(country)s).",
+  "weather_on_your_site": "Laika ziņas jūsu vietnē",
+  "weather_place_description_format": "Laika prognoze %(name1)s, %(name2)s -šodien, rīt, 10 dienas, 7 dienas",
+  "weather_place_details_info_format": "Laika ziņas %(name1)s, %(name2)s šodien, rīt, 3 dienas, 7 dienas, 10 dienas, 15 dienas, šajās dienās. Prognoze %(name3)s.",
+  "weather_place_title_format_10days_format": "%(name1)s laika prognoze %(name2)s, 10 dienas",
+  "weather_place_title_format": "%(name1)s laika prognoze %(name2)s laikapstākļi",
+  "weather": "Laikapstākļi",
+  "weather2": "Prognoze",
+  "weekly_horoscope_details_format": "Weekly Horoscope: %(date)s.",
+  "weekly_horoscope_details": "Weekly Horoscope. Horoscope for the current week.",
+  "weekly_horoscope_format": "Weekly Horoscope: %(date)s",
+  "weekly_horoscope": "Weekly Horoscope",
+  "weekly": "Weekly",
+  "width": "Platums",
+  "love": "Mīlestība",
+  "health": "Veselība",
+  "success": "Panākumi",
+  "wind": "Vējš"
 }
