--- a/locales/sr.json
+++ b/locales/sr.json
@@ -1,192 +1,206 @@
 {
-    "24_hrs": "24 sati",
-    "accept_notifications": "Primește notificări",
-    "ads": "Publicitate",
-    "back_color": "Boja pozadine",
-    "base_color": "Baza boja",
-    "border_color": "Boja ivice",
-    "configuration": "Konfiguracija",
-    "contact": "Kontakt",
-    "count_news_format": [[0, 0,"%d știri"], [1,1,"o știre"], [2,null,"%d știri"]],
-    "count_places_format": [[0,0,"%d localități"], [1,1,"o localitate"], [2,null,"+%d localități"]],
-    "count_views_format": [[0,0,"%d vizualizări"], [1,1,"o vizualizare"], [2,null,"%d vizualizări"]],
-    "country_al": "Albanija",
-    "country_bg": "Bugarska",
-    "country_cz": "Češka",
-    "country_hu": "Mađarska",
-    "country_in": "India",
-    "country_it": "Italija",
-    "country_lv": "Letonija",
-    "country_md": "Moldavija",
-    "country_pl": "Poljska",
-    "country_ro": "Rumunija",
-    "country_ru": "Rusija",
-    "country_tr": "Turska",
-    "country_kz": "Kazahstan",
-    "country_rs": "Srbija",
-    "daily_horoscope_details_format": "Horoscopul pentru astăzi %(name)s.",
-    "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
-    "daily_horoscope_format": "Horoscop: %(name)s",
-    "daily_horoscope": "Horoscopul zilei",
-    "daily": "Zilnic",
-    "date_format": "D MMMM",
-    "day_format": "dddd, D MMMM",
-    "days": "dana",
-    "detailed_horoscope": "Horoscop detaliat",
-    "error_404_info": "Stranica nije pronađena",
-    "error_500_info": "Nepoznata greška",
-    "error_description": "Došlo je do greške. Tražimo krivce...",
-    "error": "Greška",
-    "events_from_country_format": "Evenimente din %(name)s",
-    "events": "Evenimente",
-    "exchange_rates": "Curs valutar",
-    "exchange": "Curs valutar",
-    "export_horoscope": "Preluare horoscop",
-    "forecast_no_data": "Molim pokušajte ponovo za nekoliko minuta.",
-    "forecast_on_email_place_format": "Vreme u %(name)s putem e-pošte.",
-    "foto_video_from_event_format": "Foto și Video: %(name)s",
-    "generate": "Generiši",
-    "head_back_color": "Naslov boje pozadine",
-    "head_text_color": "Naslov boje teksta",
-    "health": "Sănătate",
-    "heigth": "Visina",
-    "home": "Početna",
-    "horizontal": "Horizontalno",
-    "horo_api_title": "Preluare horoscop",
-    "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
-    "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
-    "horo_on_your_site": "Horoscopul pe site-ul tău",
-    "horo_sign_daily_details_format": "%(sign)s. Horoscopul zilei: %(date)s",
-    "horo_sign_daily_title_format": "%(sign)s: Horoscopul zilei",
-    "horo_sign_date_format": "D MMM",
-    "horo_sign_weekly_details_format": "%(sign)s. Horoscopul săptămânii: %(date)s",
-    "horo_sign_weekly_title_format": "%(sign)s: Horoscop săptămânal",
-    "horoscope_md_app_name": "Click Horoscop",
-    "horoscope_md_short_app_name": "Horoscop",
-    "horoscope_ro_app_name": "Ournet Horoscop",
-    "horoscope_ro_short_app_name": "Horoscop",
-    "weather_sr_app_name": "Vreme",
-    "horoscope": "Horoscop",
-    "hour": "Sat",
-    "html_code": "HTML kod",
-    "humidity": "Vlaga",
-    "icon_color": "Boja slike",
-    "images": "imagini",
-    "important_news_in_last_7days": "Știri importante în ultimele 7 zile",
-    "important_news": "Știri importante",
-    "important": "Important",
-    "in_country_rs": "Srbiji",
-    "weather_around_the_world": "Vreme širom sveta",
-    "info": "Info",
-    "international": "International",
-    "invalid_email": "Nevažeća e-mail!",
-    "item_color": "Boja artikla",
-    "item_conditions": "Atmosfersko stanje",
-    "item_pressure": "mmHg",
-    "item_temperatire": "Temperatura, °C",
-    "item_wind_dir": "Pravac vetra",
-    "item_wind_speed_ms": "m/s",
-    "item_wind_speed": "Brzina vetra. m/s",
-    "latest_events_from_country_format": "Ultimele evenimente din %(name)s",
-    "latest_events": "Ultimele evenimente",
-    "latest_news": "Ultimele știri",
-    "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %(country)s",
-    "latest_quotes_in_media": "Ultimele declarații din presă",
-    "latest_quotes": "Ultimele declarații",
-    "line_color": "Linije u boji",
-    "load_more_places": "Više lokaliteta",
-    "love": "Dragoste",
-    "lucky_numbers": "Numere norocoase",
-    "max": "max",
-    "min": "min",
-    "mm": "mm",
-    "more_events": "Mai multe evenimente",
-    "more_quotes": "Mai multe declarații",
-    "more": "Više",
-    "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
-    "news_md_app_name": "Click Știri",
-    "news_md_short_app_name": "Știri",
-    "news_ro_app_name": "Ournet Știri",
-    "news_ro_short_app_name": "Știri",
-    "news_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
-    "news_site_title_format": "Ultimele știri din %(country)s",
-    "news_sources": "Surse de știri",
-    "news_topic_description_format": "Ultimele știri și evenimente din presa despre %(name)s",
-    "news_topic_page_title_format": "%(name)s - Ultimele știri",
-    "news": "Știri",
-    "no_days": "br. dana",
-    "no_thanks": "Ne hvala",
-    "not_found_places": "Nismo mogli da pronađemo nijednu lokaciju.",
-    "opinia": "Opinia",
-    "photo": "Foto",
-    "place": "Lokalitet",
-    "places": "Mesta",
-    "popular_news": "Știri populare",
-    "popular": "Popular",
-    "portal_md_app_name": "Click.md",
-    "portal_md_short_app_name": "Click",
-    "portal_ro_app_name": "Ournet.ro",
-    "portal_ro_short_app_name": "Ournet",
-    "portal_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
-    "portal_site_title_format": "Ultimele știri din %(country)s",
-    "position": "Položaj",
-    "preview": "Pregled",
-    "quotes_about_format": "%(name)s - Declarații",
-    "quotes_by_author_format": "Declarații de %(name)s",
-    "quotes": "Declarații",
-    "read_more_on_source_format": "Citește pe %(name)s",
-    "recent_search": "Poslednje pretrage",
-    "related_news": "Știri asemănătoare",
-    "save": "Sačuvati",
-    "search_place_format": "Rezultati pretrage prema: %(name)s",
-    "search_place_in_adm_cn_format": "Potražite lokalitet u %(region)s, %(country)s",
-    "search_place_in_cn_format": "Potražite lokalitet u %(country)s",
-    "search_place": "Potražite lokalitet",
-    "search_result_format": "Rezultati: %(name)s",
-    "share_on_format": "Objavite na %(name)s",
-    "share_with_your_friends": "Podeli sa prijateljima",
-    "show_header": "Po naslovu",
-    "subscribe_to_daily_notifications": "Pretplatite se na dnevna obaveštenja",
-    "subscribe": "Pretplatiti se",
-    "success": "Uspeh",
-    "temperature": "Temperatura",
-    "text_color": "Tekst u boji",
-    "today": "Danas",
-    "tomorrow": "Sutra",
-    "topic_events_title_format": "%(name)s - Evenimente",
-    "topic_latest_news_format": "%(name)s - Ultimele știri",
-    "topic_news_title_format": "Știri despre %(name)s",
-    "topic_quotes_title_format": "%(name)s - Declaratii",
-    "total_subscribers_format": "Total abonați: %d",
-    "trending": "Tendințe",
-    "useful": "Korisno",
-    "vertical": "Vertikala",
-    "video_news": "Video știri",
-    "video": "Video",
-    "views": "vizualizări",
-    "weather_cright": "Vremenska prognoza MET Norveške",
-    "weather_for_10days": "Vremenska prognoza za 10 dana",
-    "weather_home_title_format": "Vremenska prognoza: %(name)s za 10 dana",
-    "weather_in_cn_summary_format": "Vremenska prognoza: %(country)s, 10 dana na bilo kom mestu",
-    "weather_in_format": "Vremenska prognoza: %(name)s",
-    "weather_md_app_name": "Vremenska prognoza",
-    "weather_md_short_app_name": "Vremenska",
-    "weather_notifications_subscribe_for_place_format": "Pretplatite se na vremenska upozorenja za %(name)s",
-    "weather_on_your_site_info_format": "Stavite vremensku prognozu na svoju veb lokaciju za bilo koji lokalitet %(country)s.",
-    "weather_on_your_site": "Vreme na vašem sajtu",
-    "weather_place_description_format": "Vremenska prognoza %(name1)s, vreme u %(name2)s - danas, sutra, 10 dana",
-    "weather_place_details_info_format": "Vremenska prognoza %(name1)s, vreme u %(name2)s, данас, сутра, прекосутра, 3 дана, 7 дана, 10 дана, наредних дана. Време у %(name3)s.",
-    "weather_place_title_format_10days_format": "Vreme u %(name1)s, vremenska prognoza %(name2)s, 10 dana",
-    "weather_place_title_format": "Vreme u %(name1)s, vremenska prognoza %(name2)s",
-    "weather_rs_app_name": "Vremenska prognoza",
-    "weather_rs_short_app_name": "Vremenska",
-    "weather": "Vreme",
-    "weather2": "Vremenska",
-    "weekly_horoscope_details_format": "Horoscop săptămânal: %(date)s.",
-    "weekly_horoscope_details": "Horoscop săptămânal. Horoscopul pentru săptămâna curentă.",
-    "weekly_horoscope_format": "Horoscop săptămânal: %(date)s",
-    "weekly_horoscope": "Horoscop săptămânal",
-    "weekly": "Nedeljno",
-    "width": "Širina",
-    "wind": "Vetar"
+  "24_hrs": "24 sati",
+  "accept_notifications": "Primește notificări",
+  "ads": "Publicitate",
+  "back_color": "Boja pozadine",
+  "base_color": "Baza boja",
+  "border_color": "Boja ivice",
+  "configuration": "Konfiguracija",
+  "contact": "Kontakt",
+  "count_news_format": [
+    [0, 0, "%d știri"],
+    [1, 1, "o știre"],
+    [2, null, "%d știri"]
+  ],
+  "count_places_format": [
+    [0, 0, "%d localități"],
+    [1, 1, "o localitate"],
+    [2, null, "+%d localități"]
+  ],
+  "count_views_format": [
+    [0, 0, "%d vizualizări"],
+    [1, 1, "o vizualizare"],
+    [2, null, "%d vizualizări"]
+  ],
+  "country_al": "Albanija",
+  "country_bg": "Bugarska",
+  "country_cz": "Češka",
+  "country_hu": "Mađarska",
+  "country_in": "India",
+  "country_it": "Italija",
+  "country_lv": "Letonija",
+  "country_md": "Moldavija",
+  "country_pl": "Poljska",
+  "country_ro": "Rumunija",
+  "country_ru": "Rusija",
+  "country_tr": "Turska",
+  "country_kz": "Kazahstan",
+  "country_rs": "Srbija",
+  "daily_horoscope_details_format": "Horoscopul pentru astăzi %(name)s.",
+  "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
+  "daily_horoscope_format": "Horoscop: %(name)s",
+  "daily_horoscope": "Horoscopul zilei",
+  "daily": "Zilnic",
+  "date_format": "D MMMM",
+  "day_format": "dddd, D MMMM",
+  "days": "dana",
+  "detailed_horoscope": "Horoscop detaliat",
+  "error_404_info": "Stranica nije pronađena",
+  "error_500_info": "Nepoznata greška",
+  "error_description": "Došlo je do greške. Tražimo krivce...",
+  "error": "Greška",
+  "events_from_country_format": "Evenimente din %(name)s",
+  "events": "Evenimente",
+  "exchange_rates": "Curs valutar",
+  "exchange": "Curs valutar",
+  "export_horoscope": "Preluare horoscop",
+  "forecast_no_data": "Molim pokušajte ponovo za nekoliko minuta.",
+  "forecast_on_email_place_format": "Vreme u %(name)s putem e-pošte.",
+  "foto_video_from_event_format": "Foto și Video: %(name)s",
+  "generate": "Generiši",
+  "head_back_color": "Naslov boje pozadine",
+  "head_text_color": "Naslov boje teksta",
+  "health": "Sănătate",
+  "heigth": "Visina",
+  "home": "Početna",
+  "horizontal": "Horizontalno",
+  "horo_api_title": "Preluare horoscop",
+  "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
+  "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
+  "horo_on_your_site": "Horoscopul pe site-ul tău",
+  "horo_sign_daily_details_format": "%(sign)s. Horoscopul zilei: %(date)s",
+  "horo_sign_daily_title_format": "%(sign)s: Horoscopul zilei",
+  "horo_sign_date_format": "D MMM",
+  "horo_sign_weekly_details_format": "%(sign)s. Horoscopul săptămânii: %(date)s",
+  "horo_sign_weekly_title_format": "%(sign)s: Horoscop săptămânal",
+  "horoscope_md_app_name": "Click Horoscop",
+  "horoscope_md_short_app_name": "Horoscop",
+  "horoscope_ro_app_name": "Ournet Horoscop",
+  "horoscope_ro_short_app_name": "Horoscop",
+  "weather_sr_app_name": "Vreme",
+  "horoscope": "Horoscop",
+  "hour": "Sat",
+  "html_code": "HTML kod",
+  "humidity": "Vlaga",
+  "icon_color": "Boja slike",
+  "images": "imagini",
+  "important_news_in_last_7days": "Știri importante în ultimele 7 zile",
+  "important_news": "Știri importante",
+  "important": "Important",
+  "in_country_rs": "Srbiji",
+  "weather_around_the_world": "Vreme širom sveta",
+  "info": "Info",
+  "international": "International",
+  "invalid_email": "Nevažeća e-mail!",
+  "item_color": "Boja artikla",
+  "item_conditions": "Atmosfersko stanje",
+  "item_pressure": "mmHg",
+  "item_temperatire": "Temperatura, °C",
+  "item_wind_dir": "Pravac vetra",
+  "item_wind_speed_ms": "m/s",
+  "item_wind_speed": "Brzina vetra. m/s",
+  "latest_events_from_country_format": "Ultimele evenimente din %(name)s",
+  "latest_events": "Ultimele evenimente",
+  "latest_news": "Ultimele știri",
+  "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %(country)s",
+  "latest_quotes_in_media": "Ultimele declarații din presă",
+  "latest_quotes": "Ultimele declarații",
+  "line_color": "Linije u boji",
+  "load_more_places": "Više lokaliteta",
+  "love": "Dragoste",
+  "lucky_numbers": "Numere norocoase",
+  "max": "max",
+  "min": "min",
+  "mm": "mm",
+  "more_events": "Mai multe evenimente",
+  "more_quotes": "Mai multe declarații",
+  "more": "Više",
+  "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
+  "news_md_app_name": "Click Știri",
+  "news_md_short_app_name": "Știri",
+  "news_ro_app_name": "Ournet Știri",
+  "news_ro_short_app_name": "Știri",
+  "news_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
+  "news_site_title_format": "Ultimele știri din %(country)s",
+  "news_sources": "Surse de știri",
+  "news_sources_in_country_format": "News sources in %(country)s",
+  "add_news_source": "Add new source",
+  "news_topic_description_format": "Ultimele știri și evenimente din presa despre %(name)s",
+  "news_topic_page_title_format": "%(name)s - Ultimele știri",
+  "news": "Știri",
+  "no_days": "br. dana",
+  "no_thanks": "Ne hvala",
+  "not_found_places": "Nismo mogli da pronađemo nijednu lokaciju.",
+  "opinia": "Opinia",
+  "photo": "Foto",
+  "place": "Lokalitet",
+  "places": "Mesta",
+  "popular_news": "Știri populare",
+  "popular": "Popular",
+  "portal_md_app_name": "Click.md",
+  "portal_md_short_app_name": "Click",
+  "portal_ro_app_name": "Ournet.ro",
+  "portal_ro_short_app_name": "Ournet",
+  "portal_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
+  "portal_site_title_format": "Ultimele știri din %(country)s",
+  "position": "Položaj",
+  "preview": "Pregled",
+  "quotes_about_format": "%(name)s - Declarații",
+  "quotes_by_author_format": "Declarații de %(name)s",
+  "quotes": "Declarații",
+  "read_more_on_source_format": "Citește pe %(name)s",
+  "recent_search": "Poslednje pretrage",
+  "related_news": "Știri asemănătoare",
+  "save": "Sačuvati",
+  "search_place_format": "Rezultati pretrage prema: %(name)s",
+  "search_place_in_adm_cn_format": "Potražite lokalitet u %(region)s, %(country)s",
+  "search_place_in_cn_format": "Potražite lokalitet u %(country)s",
+  "search_place": "Potražite lokalitet",
+  "search_result_format": "Rezultati: %(name)s",
+  "share_on_format": "Objavite na %(name)s",
+  "share_with_your_friends": "Podeli sa prijateljima",
+  "show_header": "Po naslovu",
+  "subscribe_to_daily_notifications": "Pretplatite se na dnevna obaveštenja",
+  "subscribe": "Pretplatiti se",
+  "success": "Uspeh",
+  "temperature": "Temperatura",
+  "text_color": "Tekst u boji",
+  "today": "Danas",
+  "tomorrow": "Sutra",
+  "topic_events_title_format": "%(name)s - Evenimente",
+  "topic_latest_news_format": "%(name)s - Ultimele știri",
+  "topic_news_title_format": "Știri despre %(name)s",
+  "topic_quotes_title_format": "%(name)s - Declaratii",
+  "total_subscribers_format": "Total abonați: %d",
+  "trending": "Tendințe",
+  "useful": "Korisno",
+  "vertical": "Vertikala",
+  "video_news": "Video știri",
+  "video": "Video",
+  "views": "vizualizări",
+  "weather_cright": "Vremenska prognoza MET Norveške",
+  "weather_for_10days": "Vremenska prognoza za 10 dana",
+  "weather_home_title_format": "Vremenska prognoza: %(name)s za 10 dana",
+  "weather_in_cn_summary_format": "Vremenska prognoza: %(country)s, 10 dana na bilo kom mestu",
+  "weather_in_format": "Vremenska prognoza: %(name)s",
+  "weather_md_app_name": "Vremenska prognoza",
+  "weather_md_short_app_name": "Vremenska",
+  "weather_notifications_subscribe_for_place_format": "Pretplatite se na vremenska upozorenja za %(name)s",
+  "weather_on_your_site_info_format": "Stavite vremensku prognozu na svoju veb lokaciju za bilo koji lokalitet %(country)s.",
+  "weather_on_your_site": "Vreme na vašem sajtu",
+  "weather_place_description_format": "Vremenska prognoza %(name1)s, vreme u %(name2)s - danas, sutra, 10 dana",
+  "weather_place_details_info_format": "Vremenska prognoza %(name1)s, vreme u %(name2)s, данас, сутра, прекосутра, 3 дана, 7 дана, 10 дана, наредних дана. Време у %(name3)s.",
+  "weather_place_title_format_10days_format": "Vreme u %(name1)s, vremenska prognoza %(name2)s, 10 dana",
+  "weather_place_title_format": "Vreme u %(name1)s, vremenska prognoza %(name2)s",
+  "weather_rs_app_name": "Vremenska prognoza",
+  "weather_rs_short_app_name": "Vremenska",
+  "weather": "Vreme",
+  "weather2": "Vremenska",
+  "weekly_horoscope_details_format": "Horoscop săptămânal: %(date)s.",
+  "weekly_horoscope_details": "Horoscop săptămânal. Horoscopul pentru săptămâna curentă.",
+  "weekly_horoscope_format": "Horoscop săptămânal: %(date)s",
+  "weekly_horoscope": "Horoscop săptămânal",
+  "weekly": "Nedeljno",
+  "width": "Širina",
+  "wind": "Vetar"
 }
